<resources>
    <string name="app_name">Delivery Guy</string>
    <string name="slogan">We serve passion</string>
    <string name="title_activity_delivery_person_map">Map</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="continue_label">Continue</string>
    <string name="sign_out">Sign out</string>
    <string name="create_an_account">Create an account</string>
    <string name="provide_your_details">Provide your details</string>
    <string name="store_name">Store name</string>
    <string name="email">Email</string>
    <string name="store_type">Store Type</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="both">Both</string>
    <string name="register">Register</string>
    <string name="verification_code">Verification code</string>
    <string name="enter_the_code_sent_to_your_number">Enter the code sent to your number</string>
    <string name="verify">Verify</string>
    <string name="enter_address">Enter address</string>
    <string name="enter_destination">Enter destination</string>
    <string name="home">Home</string>
    <string name="give_feedback">Give feedback</string>
    <string name="share">Share</string>
    <string name="profile">Profile</string>
    <string name="i_m_a_user">I\'m a user</string>
    <string name="i_m_a_delivery_guy">I\'m a delivery guy</string>
    <string name="full_name">Full name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_your_age">Select your age</string>
    <string name="continue_as_user">Continue As User</string>
    <string name="continue_as_delivery_person">Continue As Delivery person</string>
    <string name="send_request">Request delivery guy</string>
</resources>