<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activities.registerAndLogin.forDeliveryPerson.DeliveryGuyCodeVerificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:padding="30dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:transitionName="logoImg" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            android:fontFamily="@font/bungee_inline"
            android:text="@string/verification_code"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:transitionName="pageTitle" />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:text="@string/enter_the_code_sent_to_your_number"
            android:textSize="18sp"
            android:textStyle="bold"
            android:transitionName="pageDesc" />

        <com.chaos.view.PinView
            android:id="@+id/pvVerificationCode"
            style="@style/PinWidget.PinView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:cursorVisible="true"
            android:gravity="center"
            android:inputType="number"
            app:hideLineWhenFilled="true"
            app:itemCount="6"
            app:itemHeight="50dp"
            app:itemRadius="5dp"
            app:itemWidth="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnVerify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:backgroundTint="@color/black"
                android:onClick="callNextScreenFromOTPDeliveryPerson"
                android:transitionName="pageButton"
                android:text="@string/verify" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>